<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bakibillah.dcc.AdministratorActivity">

<!--
    <ScrollView
        android:layout_width="368dp"
        android:layout_height="551dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/chairman1"/>
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/professor_dr_syed_modasser_ali"/>

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/chairman"/>
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dhaka_city_college_governing_body"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/principal"/>
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/professor_mohammad_shahjahan_khan"/>

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/principal"/>
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/app_name"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/viceprincipal"/>
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/professor_anwar_hossain"/>

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/vice_principal_administration_and_finance"/>
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/app_name"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/viceprincipal1"/>
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/professor_bedar_uddin_ahmed"/>

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/vice_president_academic"/>
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/app_name"/>



        </LinearLayout>


    </ScrollView>
    -->

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">

            <ImageView
                android:src="@drawable/dcc1"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_at_a_glance"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/college_administration"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:textColor="#000000"
                        android:text="@string/professor_dr_syed_modasser_ali"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_marginTop="12dp"
                        android:textSize="20sp"
                        android:padding="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:padding="2sp"
                        android:layout_gravity="center"
                        android:layout_height="96dp"
                        android:src="@drawable/chairman1"
                        android:scaleType="centerCrop"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:padding="2sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/chairman"/>

                    <TextView
                        android:padding="2sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/dhaka_city_college_governing_body"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:textColor="#000000"
                        android:text="@string/professor_mohammad_shahjahan_khan"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp"
                        android:padding="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="96dp"
                        android:padding="2sp"
                        android:layout_gravity="center"
                        android:layout_height="96dp"
                        android:src="@drawable/principal"
                        android:scaleType="centerCrop"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:padding="2sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/principal"/>

                    <TextView
                        android:padding="2sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/app_name"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:textColor="#000000"
                        android:text="@string/professor_anwar_hossain"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_marginTop="12dp"
                        android:textSize="20sp"
                        android:padding="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="96dp"
                        android:padding="2sp"
                        android:layout_gravity="center"
                        android:layout_height="96dp"
                        android:src="@drawable/viceprincipal"
                        android:scaleType="centerCrop"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:padding="2sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/vice_principal_administration_and_finance"/>

                    <TextView
                        android:padding="2sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/app_name"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:textColor="#000000"
                        android:text="@string/professor_bedar_uddin_ahmed"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_marginTop="12dp"
                        android:textSize="20sp"
                        android:padding="14dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="96dp"
                        android:padding="2sp"
                        android:layout_gravity="center"
                        android:layout_height="96dp"
                        android:src="@drawable/viceprincipal1"
                        android:scaleType="centerCrop"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />
                    <TextView
                        android:padding="2sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/vice_president_academic"/>

                    <TextView
                        android:padding="2sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/app_name"/>


                </LinearLayout>
            </android.support.v7.widget.CardView>



        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_dcc"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="6dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp" />
</android.support.design.widget.CoordinatorLayout>
